# SiteSlayer

./: .env.example  .gitignore  Dockerfile  HTML_GENERATION_README.md  MARKDOWN_AGGREGATION.md  README.md  email_writer.py  generate_html.py  pyproject.toml  requirements.txt  sites_to_scrape.txt  test_aggregator.py
.github/workflows/: fly-deploy.yml  scrape-sites.yml
scripts/: deploy_server.sh  scrape_site.sh  start_server.py
sites/arkhealthfoundation_com/: content.md  email.txt  index.html  urls.txt
sites/bivensdentistry_com/: content.md  urls.txt
sites/dentalgroupofchicago_com/: content.md  email.txt  index.html  urls.txt
sites/dentistryofnashville_com/: content.md  email.txt  index.html  urls.txt
sites/enfdentistry_com/: content.md  email.txt  index.html  urls.txt
sites/example.com/: content.md  index.html
sites/example_com/: content.md  error.txt
sites/ifdnashville_com/: content.md  email.txt  error.txt  index.html  urls.txt
sites/itch_io/: content.md  index.html
sites/katherinehalldds_com/: content.md  email.txt  error.txt  index.html  urls.txt
sites/lifetimedentistrytn_com/: content.md  email.txt  index.html  urls.txt
sites/millcreekdental_net/: content.md  email.txt  index.html  urls.txt
sites/musiccitydental_com/: content.md  email.txt  index.html  urls.txt
sites/nashvillesmilesup_com/: content.md  email.txt  index.html  urls.txt
web_scraper/: Page Prioritization Methods  aggregate_content.py  analyze_links.py  config.py  email_writer.py  homepage_duplicate.py  main.py  replicate_site.py
website_server/: agent.py  main.py
(+137 files in other folders)
